--- a/calculator.html
+++ b/calculator.html
@@ -34,12 +34,12 @@
                 <td>/</td>
             </tr>
             <tr>
-                <td colspan="4"></td>
+                <td colspan="4">=</td>
             </tr>
         </table>
                 
         <script>
-            
+
         </script>
     </body>
 </html>
